--- a/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.yaml
@@ -1,5 +1,5 @@
 context:
-  title: More opportunities to study at the RCA
+  title: "More opportunities to study at the RCA"
   related_sections:
     - item:
       title: Related programmes
