Add hero and strapline cta fields

--- a/rca/project_styleguide/templates/patterns/atoms/audience-nav-item/audience-nav-item--desc.yaml
+++ b/rca/project_styleguide/templates/patterns/atoms/audience-nav-item/audience-nav-item--desc.yaml
@@ -1,5 +1,5 @@
 context:
   value:
     text: 'Study at the RCA'
-    description: Discover our programmes
+    sub_text: Discover our programmes
     href: '#'
