--- a/rca/project_styleguide/templates/patterns/atoms/image/image--lazyload.yaml
+++ b/rca/project_styleguide/templates/patterns/atoms/image/image--lazyload.yaml
@@ -1,7 +1,7 @@
 context:
   width: '829'
   height: '585'
-  imageSmall:
+  image_small:
     url: '//placekitten.com/100/71'
-  imageLarge:
+  image_large:
     url: '//placekitten.com/829/585'
