--- a/rca/project_styleguide/templates/patterns/molecules/image-caption-link/image-caption-link.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/image-caption-link/image-caption-link.yaml
@@ -4,12 +4,12 @@ context:
 
 tags:
   image:
-    curriculum_image fill-80x37 as imageSmall:
-      target_var: imageSmall
+    curriculum_image fill-80x37 as image_small:
+      target_var: image_small
       raw:
         url: '//placekitten.com/80/37'
-    curriculum_image fill-900x415 as imageLarge:
-      target_var: imageLarge
+    curriculum_image fill-900x415 as image_large:
+      target_var: image_large
       raw:
         url: '//placekitten.com/900/415'
         width: '900'
