--- a/rca/project_styleguide/templates/patterns/molecules/card/card--square.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/card/card--square.yaml
@@ -8,12 +8,12 @@ context:
 
 tags:
   image:
-    card.image fill-80x80 as imageSmall:
-      target_var: imageSmall
+    card.image fill-80x80 as image_small:
+      target_var: image_small
       raw:
         url: '//placekitten.com/80/80'
-    card.image fill-554x554 as imageLarge:
-      target_var: imageLarge
+    card.image fill-554x554 as image_large:
+      target_var: image_large
       raw:
         url: '//placekitten.com/554/554'
         width: '554'
