--- a/rca/project_styleguide/templates/patterns/molecules/hero/hero--home.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/hero/hero--home.yaml
@@ -5,15 +5,15 @@ context:
 
 tags:
   image:
-    page.hero_image fill-320x568 as imageSmall:
-      target_var: imageSmall
+    page.hero_image fill-320x568 as image_small:
+      target_var: image_small
       raw:
         url: '//placekitten.com/320/568'
     page.hero_image fill-768x1024 as imageMedium:
       target_var: imageMedium
       raw:
         url: '//placekitten.com/768/1024'
-    page.hero_image fill-1440x900 as imageLarge:
-      target_var: imageLarge
+    page.hero_image fill-1440x900 as image_large:
+      target_var: image_large
       raw:
         url: '//placekitten.com/1440/900'
