--- a/rca/project_styleguide/templates/patterns/molecules/hero/hero.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/hero/hero.yaml
@@ -1,14 +1,14 @@
 tags:
   image:
-    page.hero_image fill-320x285 as imageSmall:
-      target_var: imageSmall
+    page.hero_image fill-320x285 as image_small:
+      target_var: image_small
       raw:
         url: '//placekitten.com/320/285'
     page.hero_image fill-768x530 as imageMedium:
       target_var: imageMedium
       raw:
         url: '//placekitten.com/768/530'
-    page.hero_image fill-1440x530 as imageLarge:
-      target_var: imageLarge
+    page.hero_image fill-1440x530 as image_large:
+      target_var: image_large
       raw:
         url: '//placekitten.com/1440/530'
