--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ jobs:
             git push https://heroku:$HEROKU_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git master
 workflows:
   version: 2
-  build-deploy:
+  build:
     jobs:
       - test
       - deploy_staging:
