--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/curriculum.yaml
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/curriculum.yaml
@@ -8,6 +8,7 @@ context:
           heading: First Year
           preview_text:
           body: These categories are loose and extend to other genres and approaches, and all students are expected and encouraged to innovate, experiment and take inspiration and influence from the other pathways, alongside the core Programme offer and the wider School.
+          introduction: The RCA provides a unique environment for postgraduate art and design students to reflect upon their own practice, and to engage with students from their own and other disciplines
           link:
             title: 'Find out more'
             url: '#'
