--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/fees-and-funding.yaml
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/fees-and-funding.yaml
@@ -26,6 +26,16 @@ context:
 
     scholarships_title: 'Scholarships for Architecture MA'
     scholarships_information: 'This list will be updated as new scholarships are confirmed, so please check back from time to time. Please note the application dates listed, as they can vary.'
+    scholarship_accordion_items:
+      - accordion:
+        value:
+          heading: Available Scholarships for Architecture MA
+          preview_text:
+          introduction: The RCA provides a unique environment for postgraduate art and design students to reflect upon their own practice, and to engage with students from their own and other disciplines
+          body: These categories are loose and extend to other genres and approaches, and all students are expected and encouraged to innovate, experiment and take inspiration and influence from the other pathways, alongside the core Programme offer and the wider School.
+          link:
+            title: 'Find out more'
+            url: '#'
     scholarship_accordion_blocks:
       accordion:
         - value:
