--- a/rca/project_styleguide/templates/patterns/molecules/staff-detail/staff-detail.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/staff-detail/staff-detail.yaml
@@ -1,16 +1,18 @@
 context:
-  title: 'Beth Hughes'
-  job_title: 'Head of Programmes'
-  body: 'Director of her own practice, Beth Hughes has worked on projects of all scales, public and private, around the world.'
-  link: '#'
+  item:
+    title: 'Beth Hughes'
+    role: 'Head of Programmes'
+    description: 'Director of her own practice, Beth Hughes has worked on projects of all scales, public and private, around the world.'
+    link: '#'
+    link_text: 'Read more'
 
 tags:
   image:
-    person.image fill-50x50 as image_small:
+    item.image fill-50x50 as image_small:
       target_var: image_small
       raw:
         url: '//placekitten.com/50/50'
-    person.image fill-277x277 as image_large:
+    item.image fill-277x277 as image_large:
       target_var: image_large
       raw:
         url: '//placekitten.com/277/277'
