--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.yaml
@@ -74,6 +74,23 @@ context:
             title: 'Find out more'
             url: '#'
     curriculum_video: 'https://www.youtube.com/watch?v=glIIF-kBXf0'
+    steps:
+      - step:
+        value:
+          heading: Make sure you have read the programme requirements
+          link:
+            url: '#'
+            title: See programme requirements
+      - step:
+        value:
+          heading: Check you have all the information we'll need you to supply
+          link:
+            url: '#'
+            title: See programme requirements
+      - step:
+        value:
+          heading: Start your application
+
   related_programmes:
     - item:
       title: Related programmes
