Add homepage stats block

--- a/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.yaml
+++ b/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.yaml
@@ -1,17 +1,32 @@
 context:
   bg_image_url: '//placekitten.com/1440/1100'
   heading: Learnings that last a lifetime
-  stats:
-    - stat:
-      after: '%'
-      number: 33
-      meta:
-      body: 1 in 3 of our graduates are business owners or independent professionals.
-    - stat:
-      number: 73
-      meta: Nationalities
-      body: Our students come from all sections of the globe
-    - stat:
-      after: st
-      number: 1
-      body: We're the top rated art & design university in the world
+  stats_block:
+    title: Learnings that last a lifetime
+    bg_image_url: '//place-puppy.com/1000x500'
+    statistics:
+      - stat:
+        value:
+          after: '%'
+          number: 33
+          meta:
+          body: 1 in 3 of our graduates are business owners or independent professionals.
+      - stat:
+        value:
+          number: 73
+          meta: Nationalities
+          body: Our students come from all sections of the globe
+      - stat:
+        value:
+          after: st
+          number: 1
+          body: We're the top rated art & design university in the world
+
+tags:
+  image:
+    stats_block.background_image max-1000x500 as bg_image:
+      target_var: bg_image
+      raw:
+        url: '//place-puppy.com/1000x500'
+        width: '1000'
+        height: '500'
