--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.yaml
@@ -1,7 +1,13 @@
 context:
   page:
     title: Homepage
-    strapline: This is a home page
+    strapline: The world’s number 1 art & design university
+    hero_cta_text: Apply for programmes starting 2020
+    hero_cta_url: '#'
+    hero_cta_sub_text: Shape your future
+    strapline_cta_text: Book an open day
+    strapline_cta_url: '#'
+
     call_to_action:
       title: Stub content
       summary: Check out our awesome stub content
@@ -78,3 +84,17 @@ context:
       person:
         image: true
         title: 'Nelly Ben Hayoun'
+  transformation_blocks:
+    first:
+      heading: Ideas that can change the world
+      sub_heading: RCA projects that have the potential to transform our world for the better.
+      page_title: Transforming toxic waste into pottery
+      page_summary: Find out how a group of our MA students turned red mud into a range of striking pottery.
+      page_link: '#'
+      video: 'https://www.youtube.com/watch?v=1PWTqCBVjjU'
+      video_caption: Watch video
+  stats_block:
+    statistics:
+      - stat:
+      - stat:
+      - stat:
