--- a/rca/project_styleguide/templates/patterns/base.yaml
+++ b/rca/project_styleguide/templates/patterns/base.yaml
@@ -1,4 +1,7 @@
-tags:
+context:
+  hero_colour: light
+
+  tags:
   primarynav:
     '':
       template_name: 'patterns/molecules/navigation/primarynav.html'
