--- a/rca/project_styleguide/templates/patterns/molecules/card/card--square.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/card/card--square.yaml
@@ -2,17 +2,17 @@ context:
   item:
     meta: 'Event'
     title: 'Show 2019: School of Architecture'
-    description: '28-29 April'
+    summary: '28-29 April'
     image: true
     link: '#'
 
 tags:
   image:
-    card.image fill-80x80 as image_small:
+    item.image fill-80x80 as image_small:
       target_var: image_small
       raw:
         url: '//placekitten.com/80/80'
-    card.image fill-554x554 as image_large:
+    item.image fill-554x554 as image_large:
       target_var: image_large
       raw:
         url: '//placekitten.com/554/554'
