Require manual approval for production deployment job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,6 +93,7 @@ workflows:
             branches:
               only: staging
       - deploy_production:
+          Type: approval
           requires:
             - test
           filters:
