--- a/rca/project_styleguide/templates/patterns/molecules/card/card_api_content.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/card/card_api_content.yaml
@@ -2,6 +2,6 @@ context:
   item:
     type: 'Event'
     title: 'Show 2019: School of Architecture'
-    date: '28-29 April'
+    description: '28-29 April'
     image: //placekitten.com/500/500
     link: '#'
