--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ wagtail==2.6
 psycopg2==2.7.7
 wagtail-django-recaptcha==1.0
 django-pattern-library==0.2.4
+git+https://github.com/nypublicradio/wagtail-websockets.git@657dcc3ab8c975b6108e357d3b6b9bba69dd7840
 
 # Production dependencies
 whitenoise[brotli]==4.1.2
