--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-pattern-library==0.2.4
 git+https://github.com/nypublicradio/wagtail-websockets.git@657dcc3ab8c975b6108e357d3b6b9bba69dd7840
 
 # Production dependencies
+daphne==2.3.0
 whitenoise[brotli]==4.1.2
 dj-database-url==0.5.0
 raven==6.10.0
