--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-pattern-library==0.2.4
 wagtail-websockets==0.1.2
 
 # Production dependencies
+daphne==2.3.0
 whitenoise[brotli]==4.1.2
 dj-database-url==0.5.0
 raven==6.10.0
