Updating related progs name

--- a/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.yaml
@@ -22,7 +22,7 @@ context:
 
 tags:
   pageurl:
-    specific_related_page:
+    related_item:
       raw: '#'
   image:
     related_item.hero_image fill-500x500 as programme_image:
