--- a/rca/project_styleguide/templates/patterns/molecules/hero/hero--home.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/hero/hero--home.yaml
@@ -9,8 +9,8 @@ tags:
       target_var: image_small
       raw:
         url: '//placekitten.com/320/568'
-    page.hero_image fill-768x1024 as imageMedium:
-      target_var: imageMedium
+    page.hero_image fill-768x1024 as image_medium:
+      target_var: image_medium
       raw:
         url: '//placekitten.com/768/1024'
     page.hero_image fill-1440x900 as image_large:
