Applying more bottom padding to facility slideshow if no alumni

--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.yaml
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.yaml
@@ -1,4 +1,19 @@
 context:
+  alumni_links:
+    - link:
+      value:
+        name: 'James Dyson'
+        link: '#'
+    - link:
+      value:
+        name: 'Anton Furst'
+        link: '#'
+    - link:
+      value:
+        name: 'Golifer Langston Architects'
+        link: '#'
+  alumni_gallery: 'true'
+  programme_slideshow_modifier: slideshow--author-info
   related_staff:
     - item
     - item
