--- a/package.json
+++ b/package.json
@@ -89,9 +89,14 @@
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.23.6",
     "css-loader": "^3.2.0",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^5.1.0",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-config-torchbox": "^0.3.2",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "jest": "^24.8.0",
     "mini-css-extract-plugin": "^0.7.0",
     "npm-run-all": "^4.1.5",
