--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "hoverintent": "^2.2.0",
     "intersection-observer": "^0.7.0",
     "js-cookie": "^2.2.1",
+    "lodash.debounce": "^4.0.8",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
