--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.yaml
@@ -1,4 +1,7 @@
 context:
+  title_multiline: >-
+    Our
+    Programmes
   page:
     title: Our Programmes
     introduction: <p>Experience the world&apos;s <a href="https://www.example.com/">number one</a> university for art and design.</p>
