--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,17 @@
 {
-    presets: [
+    "presets": [
         [
-            '@babel/preset-env',
+            "@babel/preset-env",
             {
-                modules: false,
-            },
+                "modules": false
+            }
         ],
-        '@babel/preset-react',
+        "@babel/preset-react"
     ],
-    plugins: [
-        '@babel/plugin-proposal-class-properties',
-    ],
-    env: {
-        test: {
-            presets: ['@babel/preset-env', '@babel/preset-react'],
-        },
-    },
+    "plugins": ["@babel/plugin-proposal-class-properties"],
+    "env": {
+        "test": {
+            "presets": ["@babel/preset-env", "@babel/preset-react"]
+        }
+    }
 }
