--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "browserslist": [
     "> 0.5% and last 2 versions",
-    "ie 11",
+    "Firefox ESR",
+    "ios_saf 11",
+    "ios_saf 12",
+    "safari 11",
+    "not ie 11",
     "not ie_mob 11",
-    "Firefox ESR"
+    "not android 4.4.3-4.4.4",
+    "not OperaMini all"
   ],
   "sasslintConfig": ".sass-lint.yml",
   "jest": {
