--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.23.6",
     "css-loader": "^3.4.1",
+    "cssnano": "^4.1.10",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.3",
