--- a/stellar.yaml
+++ b/stellar.yaml
@@ -1,6 +1,6 @@
 logging: 30
 migrate_from_0_3_2: false
-project_name: { { cookiecutter.repo_name } }
+project_name: Royal College of Art
 stellar_url: postgresql+psycopg2:///stellar_data
-tracked_databases: [{ { cookiecutter.repo_name } }]
+tracked_databases: [rca]
 url: postgresql+psycopg2:///template1
