--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-transition-group": "^4.3.0",
     "react-use": "^13.14.0",
     "rellax": "^1.10.0",
     "scrollama": "^2.1.4",
