--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,4 @@ django-csp==3.5
 scout-apm==2.0.2
 django-basic-auth-ip-whitelist==0.2.1
 redis==2.10.6
-wagtailorderable==1.0.2
+wagtail-orderable==1.0.2
