--- a/rca/project_styleguide/templates/patterns/molecules/streamfield/blocks/quote_block.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/streamfield/blocks/quote_block.yaml
@@ -1,4 +1,5 @@
 context:
   value:
-    quote: 'Some quote'
-    attribution: 'Some attribution'
+    quote: 'Highly relevant for anyone looking for more effective ways to solve innovation challenges. The main takeaways were the power of visualisation & importance of empathy and research.'
+    author: 'Benjamin Glatz'
+    job_title: 'Digital Transformation Lead, Shell'
