Adding components to short courses

--- a/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.yaml
@@ -58,6 +58,34 @@ context:
           body: 'TBC'
           heading: 'About the Design Museum'
     curriculum_video: 'https://www.youtube.com/watch?v=glIIF-kBXf0'
+    programme_gallery:
+      - slide:
+        value:
+          title: 'Albertopolissss 550-metre pedestrian tunnel'
+          author: 'Chris Lawton'
+          link: 'http://www.torchbox.com'
+          course: 'Architecture'
+      - slide:
+        value:
+          title: 'Albertopolis 550-metre pedestrian tunnel'
+          author: 'Nick Lee'
+          link: 'http://www.torchbox.com'
+          course: 'Design'
+      - slide:
+        value:
+          title: 'Albertopolis 550-metre pedestrian tunnel'
+          author: 'Chris Lawton'
+          link: 'http://www.torchbox.com'
+          course: 'Architecture'
+      - slide:
+        value:
+          title: 'Albertopolis 550-metre pedestrian tunnel'
+          author: 'Kevin Howbrook'
+          link: 'http://www.torchbox.com'
+          course: 'Design'
+  related_staff:
+    - item
+    - item
   partnerships_block:
     slides:
       - slide:
