--- a/rca/project_styleguide/templates/patterns/molecules/staff-detail/staff-detail.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/staff-detail/staff-detail.yaml
@@ -1,6 +1,6 @@
 context:
   item:
-    title: 'Beth Hughes'
+    name: 'Beth Hughes'
     role: 'Head of Programmes'
     description: 'Director of her own practice, Beth Hughes has worked on projects of all scales, public and private, around the world.'
     link: '#'
