Updating homepage to show alumni stories

--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.yaml
@@ -38,7 +38,7 @@ context:
       link: '#'
       image: true
       person: false
-  alumni:
+  alumni_stories:
     - slide:
       meta: 'Alumni Story'
       title: 'A place with a real focus on making'
