Profile teaser, related links and student listing components

--- a/rca/project_styleguide/templates/patterns/organisms/student-listing/student-listing.yaml
+++ b/rca/project_styleguide/templates/patterns/organisms/student-listing/student-listing.yaml
@@ -1,12 +1,18 @@
 context:
   student_listing:
-    - { name: 'Nelly Abbott', meta: Current, link: '#' }
-    - { name: 'Nelly Abbott', meta: Current, link: '#' }
-    - { name: 'Nelly Cholmondeley-Cale', meta: Current, link: '#' }
-    - { name: 'Nelly Abbott', meta: Current, link: '#' }
-    - { name: 'Nelly Abbott', meta: Current, link: '#' }
+    - { first_name: 'Nelly', surname: 'Abbott', meta: Current, link: '#' }
+    - { first_name: 'Nelly', surname: 'Abbott', meta: Current, link: '#' }
     - {
-        name: 'Yancy Wolfeschlegelsteinhausenbergerdorffd',
+        first_name: 'Nelly',
+        surname: 'Cholmondeley-Cale',
+        meta: Current,
+        link: '#',
+      }
+    - { first_name: 'Nelly', surname: 'Abbott', meta: Current, link: '#' }
+    - { first_name: 'Nelly', surname: 'Abbott', meta: Current, link: '#' }
+    - {
+        first_name: 'Yancy',
+        surname: 'Wolfeschlegelsteinhausenbergerdorffd',
         meta: Current,
         link: '#',
       }
