Adding conditionals around short course content

--- a/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.yaml
@@ -84,6 +84,8 @@ context:
           link: 'http://www.torchbox.com'
           course: 'Design'
     staff_link: false
+    contact_image: true
+    relatedcontent: true
   related_staff:
     - item
     - item
