--- a/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.yaml
@@ -109,3 +109,7 @@ context:
     contact_text: Get in touch if you’d like to find out more or have any questions about working with the RCA.
     contact_title: Contact Us
     related_content_title: More opportunities to study at the RCA
+  related_links:
+    - { text: 'Knowledge Exchange', href: '#' }
+    - { text: 'Custom Executive Education', href: '#' }
+    - { text: 'Innovation RCA', href: '#' }
